[package]
name = "leafish_protocol"
version = "0.0.1"
authors = [ "Thinkofdeath <thinkofdeath@spigotmc.org>", "iceiix <ice_ix@protonmail.ch>", "terrarier2111" ]
edition = "2018"

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.64"
hex = "0.4.3"
sha-1 = "0.9.7"
aes = "0.7.4"
cfb8 = "0.7.1"
byteorder = "1.4.3"
log = { version = "0.4.14", features = ["std"] }
flate2 = { version = "1.0.20", features = ["rust_backend"], default-features = false }
num-traits = "0.2.14"
instant = "0.1.9"
cgmath = "0.17.0"

lazy_static = "1.4.0"
trust-dns-resolver = "0.20.3"
# srv-rs = { version = "0.2.0", features = ["libresolv"] }

dashmap = "4.0.2"

bevy_ecs = { git = "https://github.com/terrarier2111/bevy" }

reqwest = { version = "0.11.9", features = [ "cookies", "json", "blocking", "multipart" ]}
anyhow = "1.0.52"
regex = "1.5.4"
dotenv = "0.15.0"
rand = "0.8.4"
warp = "0.3.2"
webbrowser = "0.5.5"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }

[dependencies.leafish_shared]
path = "../shared"
version = "0"
