[package]
name = "leafish_protocol"
version = "0.0.1"
authors = [ "Thinkofdeath <thinkofdeath@spigotmc.org>", "iceiix <ice_ix@protonmail.ch>", "terrarier2111" ]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha-1 = "0.10"
aes = "0.7"
cfb8 = "0.7"
byteorder = "1.4"
log = { version = "0.4", features = ["std"] }
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
num-traits = "0.2"
instant = "0.1"
cgmath = "0.17"

lazy_static = "1.4.0"
trust-dns-resolver = "0.23"
# srv-rs = { version = "0.2.0", features = ["libresolv"] }

dashmap = "5.5"

bevy_ecs = "0.13"

reqwest = { version = "0.11", features = [ "blocking" ]}

[dependencies.leafish_shared]
path = "../shared"
version = "0"
